# safe-mcp-platform

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEMO_PRESENTATION.md  DEMO_QUICK_REFERENCE.md  Dockerfile.backend  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE 2  README.md  RESEARCH_ENHANCEMENTS.md  SECURITY.md  docker-compose.yml  openguardrails.code-workspace  quick_test.sh  setup.py  test_production_ready.sh
.github/ISSUE_TEMPLATE/: claim_technique.md
backend/: Dockerfile  __init__.py  admin_service.py  config.py  detection_service.py  mcp_gateway_service.py  requirements.txt  start_admin_service.py  start_gateway_service.py
backend/adaptive/: __init__.py  adaptive_policy_engine.py
backend/database/: __init__.py  connection.py  models.py
backend/detectors/: __init__.py  call_graph_analyzer.py  formal_verification_engine.py  generic_detector.py  mcp_semantic_pattern_analyzer.py  mcp_transformer.py  obfuscation_detector.py  zk_proof_system.py
backend/engine/: __init__.py  config_loader.py  detector.py  enhanced_detection_engine.py  ml_inference.py  novel_detection_engine.py  pattern_matcher.py  rule_engine.py
backend/flow_control/: __init__.py  information_flow_tracker.py
backend/gateway/: __init__ 2.py  mcp_protocol 2.py  tool_router 2.py  upstream_manager 2.py
backend/isolation/: __init__.py  execution_isolation.py
backend/migrations/: add_mcp_fields 2.py  add_token_columns.py  add_users_table.py
backend/models/: __init__.py
backend/patterns/: T1102_patterns.txt  T1105_patterns.txt  safe-t1102-prompts 2.txt  safe-t1105-paths 2.txt
backend/rules/: T1102_prompt_injection_rules.py  T1105_path_traversal_rules.py  __init__.py
config-templates/: claude-desktop-config 2.json  upstream-servers 2.json
frontend/: index.html  nginx-standalone.conf  package-lock.json  package.json  vite.config.ts
safe-mcp-cli/: README.md  pyproject.toml
safe-mcp-cli/safe_mcp_cli/: __init__.py  cli.py
safe-mcp-cli/safe_mcp_cli/commands/: __init__.py
safe-mcp-cli/safe_mcp_cli/discovery/: __init__.py  client_discovery.py
safe-mcp-cli/safe_mcp_cli/gateway/: __init__.py  config_injector.py
safe-mcp-cli/safe_mcp_cli/storage/: __init__.py  storage_manager.py
safe-mcp-sdk/: DEMO_SCRIPT.md  README 2.md  setup.py
safe_mcp/: __init__.py  __main__.py  client 2.py  gateway_client.py
scripts/: setup_client 2.sh
tests/: live_demo.py  run_simulations.py  test_detection.py  test_gateway.sh
(+111 files in other folders)
